# Vision-Artificial

./: README.md
Proyecto/: 02_rescale_intensity_ocv.cxx
Proyecto/Implementation/: 02_rescale_intensity_itk.cxx  CMakeLists.txt  Coin.cxx  Coin.h  ImageProcess.cxx  ImageProcess.h  Main.cxx  Proyecto.cxx  Prueba.cxx
Talleres/Taller2-Introduccion_itk_ocv/: 03_image_process_itk.cxx  03_image_process_ocv.cxx  CMakeLists.txt
Talleres/Taller3-Transformaciones/: CMakeLists.txt  transformaciones.cxx
Talleres/Taller4-Camara_Calibracion/: Affine_itk.cxx  CMakeLists.txt  Undistort_ocv.cxx  Warp_ocv.cxx
Talleres/Taller5-Filtrado/: CMakeLists.txt  Piramide_ocv.cxx
Talleres/Taller6-Otsu/: CMakeLists.txt  Otsu.cxx
